fixed message-box spacing

--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -2,3 +2,7 @@
   height: 83vh;
   overflow-y: scroll;
 }
+
+:host {
+  grid-column: 2/-1;
+}
